--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "ajv": "^8.17.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "rxdb": "^16.12.0",
+    "rxjs": "^7.8.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.6"
   },
