--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "rxdb": "^16.12.0",
     "rxjs": "^7.8.2",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.6"
+    "tailwindcss": "^4.1.6",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
